# debrief

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  repositories.py  routes.py  utils.py
app/api/: main.py  routes.py
app/auth/: dependencies.py  discord.py  jwt.py  routes.py
app/bot/: main.py  utils.py
app/bot/commands/: __init__.py  commands.py
app/bot/events/: __init__.py  events.py
app/bot/handlers/: __init__.py  db.py  discord.py  gemini.py
app/commands/: __init__.py  bus.py  commands.py
app/core/: settings.py
app/db/: mongo.py
app/events/: __init__.py  dispatcher.py  events.py
app/handlers/: __init__.py  db.py  discord.py  discord_response_handler.py  gemini.py  gemini_handler.py  mongodb_handler.py
app/models/: enums.py  schemas.py  types.py
app/services/: discord.py  discord_client.py  gemini.py
app/shared/: repositories.py
app/shared/auth/: dependencies.py  discord.py  jwt.py  routes.py
app/shared/core/: settings.py
app/shared/db/: mongo.py
app/static/: styles.css
app/templates/: auth_response.html
app/tests/: conftest.py
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs/docs/: configuration.md  getting-started.md  intro.md  schemas.md
tests/: conftest.py
tests/integration/: test_discord_lifespan.py
tests/unit/: test_discord_client.py  test_discord_response_handler.py  test_gemini_handler.py  test_mongodb_handler.py  test_schemas.py
(+35 files in other folders)
