[project]
name = "debrief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
