[project]
name = "debrief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "fastapi>=0.128.0",
    "google-genai>=1.62.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "PyJWT>=2.8.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.coverage.run]
omit = [
    "app/tests/mocks/*",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
skip-magic-trailing-comma = true
